Fixed all known alignment issues on main page with the footer / sponsors

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@ a, abbr, acronym, address, applet, b, big, blockquote, body, button, caption, ce
   min-height: 100%;
 }
 a{
-
+color: #2C2F33!important;
+text-decoration: none!important;
 }
 
 .centered{
@@ -329,7 +330,12 @@ a.nav-link {
   align-items: center;
 }
 .sponsor-text {
-  font-size: 16pt;
+  display: inline-block;
+  font-size: 20pt;
+  margin-bottom: 50px;
+  border-bottom: 2px solid #2C2F33;
+  border-top: 2px solid #2C2F33;
+  align-self: center;
 }
 .btn {
   align-self: baseline;
@@ -345,20 +351,21 @@ a.nav-link {
   position: relative;
   bottom: 0;
   width: 100%;
-  height: 13vh;
+  height: 6vh;
   background-color: #e9ecef;
   display: flex;
 
 }
 .footer-boxes {
+  display: flex;
   width: 50%;
-  padding-top: 2vh;
+  justify-content: space-evenly;
 }
 
 .footer-content {
 display: flex;
+align-items: center;
 justify-content: space-evenly;
-align-content: flex-end;
 }
 .rulebook {
   height: 55px;
@@ -374,64 +381,36 @@ align-content: flex-end;
   width: 50px;
 }
 .footer-image-discord {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
 }
 .footer-image-twitter {
-  height: 65px;
-  width: 50px;
+  height: 55px;
+  width: 40px;
 }
 .footer-image-youtube {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
 }
 .footer-image-twitch {
-  height: 45px;
-  width: 45px;
-}
-.content-box {
-  width: 20vw;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.content-holder {
-  align-self: center;
-  margin: 0 auto;
-}
-.tet {
-  display: flex;
+  height: 35px;
+  width: 35px;
 }
 .footer-text {
-  margin-top: 7px;
-}
-#f-top {
-  margin: 0 auto;
-}
-
-#fb-right {  
-  display: flex;
+  font-size: 1.0em;
+  margin: 0;
 }
 #fc-bottom {
   display: flex;
   justify-content: center;
 }
-
-#cb-left {
+#small {
+  margin-left: 10px;
 }
-#cb-right {
-  display: flex;
+#fb-right {
+justify-content: center;
+}
+#fc-right {
+  width: 12vw;
   align-items: center;
-}
-
-#fi-left {}
-#fi-right {}
-
-#discord {}
-#twitch {}
-#twitter {}
-#youtube {}
-
-#s {
-  font-size: 1.0em;
 }
